menu component header sidebar

--- a/src/styles/01-settings/layers.scss
+++ b/src/styles/01-settings/layers.scss
@@ -4,13 +4,12 @@ $layers: (
     box-video: 140,
     page-loader: 120,
     cookie-message: 115,
-    menu-trigger: 110,
     page-video-stage: 110,
     page-popup: 110,
     cookie: 105,
-    filter-mobile: 100,
-    header: 100,
-    main-navigation: 90,
+    header: 110,
+    menu: 105,
+    menu-button: 100,
     page-main: 3,
     page-loader--hidden: 0,
 ) !default;
