--- a/src/styles/05-components/03-blocks/header-side-bar.scss
+++ b/src/styles/05-components/03-blocks/header-side-bar.scss
@@ -18,6 +18,7 @@
         bottom: 0;
         left: 0;
         z-index: layer(side-bar);
+        transform: translateX(-100%);
     }
 
     // * States & Modifiers
