--- a/src/styles/01-settings/layers.scss
+++ b/src/styles/01-settings/layers.scss
@@ -7,9 +7,9 @@ $layers: (
     page-video-stage: 110,
     page-popup: 110,
     cookie: 105,
-    header: 110,
-    menu: 105,
-    menu-button: 100,
+    menu-button: 110,
+    header: 105,
+    side-bar: 100,
     page-main: 3,
     page-loader--hidden: 0,
 ) !default;
