--- a/src/styles/05-components/03-blocks/0-blocks.scss
+++ b/src/styles/05-components/03-blocks/0-blocks.scss
@@ -1,9 +1,11 @@
 @import "header";
 @import "header-side-bar";
+@import "site-menu";
 @import "body-copy";
 
 @mixin relashing-components-blocks {
     @include relashe-components-blocks-header;
     @include relashe-components-blocks-header-side-bar;
+    @include relashe-components-blocks-site-menu;
     @include relashe-components-blocks-body-copy;
 }
