header side bar background and animations mobile header layout

--- a/src/styles/01-settings/layers.scss
+++ b/src/styles/01-settings/layers.scss
@@ -9,7 +9,9 @@ $layers: (
     cookie: 105,
     menu-button: 110,
     header: 105,
-    side-bar: 100,
+    site-menu: 100,
+    side-bar: 95,
+    header-overlay: 90,
     page-main: 3,
     page-loader--hidden: 0,
 ) !default;
