--- a/src/styles/05-components/03-blocks/site-menu.scss
+++ b/src/styles/05-components/03-blocks/site-menu.scss
@@ -1,7 +1,7 @@
 @mixin relashe-components-blocks-site-menu {
     // * Variables
     // ====================
-    
+    $site-menu-link-delay: 75ms !default;
 
 
     // * Base Class
@@ -15,15 +15,12 @@
         color: get-var(site-menu-color);
         width: 100%;
         height: 100%;
-        opacity: 1;
-        transform: translateY(0);
-        // z-index: layer(site-menu);
-        transition:         
-            opacity $site-menu-reveal-speed cubic-bezier(0.075, 0.82, 0.165, 1),
-            transform $site-menu-slide-in-speed cubic-bezier(0.23, 1, 0.32, 1); // used when showing
+        position: fixed;
+        z-index: layer(site-menu);
 
         .grid-x{
             height: 100%;
+            width: 100%;
         }
     }
 
@@ -48,7 +45,7 @@
     .site-menu__link{
         display: block;
         opacity: 0;
-        transform: translateY(10px);
+        transform: translateY(#{get-var(base-spacing)});
         transition: opacity 0.5s 0s ease, transform 0.5s 0s ease;
 
         & + &{
@@ -68,39 +65,21 @@
     // * States & Modifiers
     // ====================
     .site-menu{
-        // * For when the navigation is hidden
-        &[aria-hidden="true"]{
-            transform: translateY(-100%);
-            opacity: 0;
-            transition:         
-            opacity ($site-menu-reveal-speed + 100) cubic-bezier(0.075, 0.82, 0.165, 1) 100ms,
-            transform ($site-menu-slide-in-speed + 100) cubic-bezier(0.23, 1, 0.32, 1); // used when hiding
-        }
-
         // * For when the navigation is shown
-        &[aria-hidden="false"]{
+        .header__side-bar[aria-expanded="true"] & {
             .site-menu__link,
             .site-menu__utility-link,
             .social-link {
                 opacity: 1;
                 transform: translateY(0);
             }
-        
         }
 
     }
 
     @for $i from 1 through 10 {
-        .site-menu[aria-hidden="false"] .site-menu__link:nth-child(#{$i}) {
-            transition-delay: #{($i * 50ms)};
-        }
-
-        .site-menu[aria-hidden="false"] .social-link:nth-child(#{$i}) {
-            transition-delay: #{($i * 50ms)};
-        }
-
-        .site-menu[aria-hidden="false"] .site-menu__utility-link:nth-child(#{$i}) {
-            transition-delay: #{($i * 50ms)};
+        .header__side-bar[aria-expanded="true"] .site-menu__link:nth-child(#{$i}) {
+            transition-delay: #{400 + ($i * $site-menu-link-delay)};
         }
     }
 
