--- a/src/styles/01-settings/spacing.scss
+++ b/src/styles/01-settings/spacing.scss
@@ -27,6 +27,7 @@ $spacing-groups:(
             null: $base-spacing * 3,
             screen768: $base-spacing * 5,
             screen1200: $base-spacing * 6,
+            screen1400: $base-spacing * 8,
         )
     ),
     'banner' : (
