--- a/src/styles/07-utilities/spacing.scss
+++ b/src/styles/07-utilities/spacing.scss
@@ -24,4 +24,41 @@
     .u-header-offset{
         @include heading-offset();
     }
+
+    @for $i from 0 through 4 {
+        $margin: $base-spacing * $i;
+        $padding: $base-spacing * $i;
+      
+        .u-margin-#{$i} {
+          margin: $margin !important;
+        }
+        .u-margin-top-#{$i} {
+          margin-top: $margin !important;
+        }
+        .u-margin-bottom-#{$i} {
+          margin-bottom: $margin !important;
+        }
+        .u-margin-left-#{$i} {
+          margin-left: $margin !important;
+        }
+        .u-margin-right-#{$i} {
+          margin-right: $margin !important;
+        }
+      
+        .u-padding-#{$i} {
+          padding: $padding !important;
+        }
+        .u-padding-top-#{$i} {
+          padding-top: $padding !important;
+        }
+        .u-padding-bottom-#{$i} {
+          padding-bottom: $padding !important;
+        }
+        .u-padding-left-#{$i} {
+          padding-left: $padding !important;
+        }
+        .u-padding-right-#{$i} {
+          padding-right: $padding !important;
+        }
+      }
 }
