--- a/src/styles/07-utilities/typography.scss
+++ b/src/styles/07-utilities/typography.scss
@@ -53,6 +53,10 @@
         @include link($font: copyLarge);
     }
 
+    .t-link-large-2{
+        @include link($font: copyLarge2);
+    }
+
     .t-link-small{
         @include link($font: copySmall);
     }
