logos copy updates

--- a/src/styles/01-settings/colors.scss
+++ b/src/styles/01-settings/colors.scss
@@ -9,7 +9,7 @@ $brand-colors: (
     brand-black: #000000,
     brand-blue: #173450,
     brand-blue-light: #3C6183,
-    brand-blue-dark: #161724,
+    brand-blue-dark: #0E0B22,
     brand-grey: #f0f0f0,
     brand-grey-light: #ECECED,
     brand-grey-dark: #3D3F40,
