--- a/src/styles/01-settings/typography.scss
+++ b/src/styles/01-settings/typography.scss
@@ -1,13 +1,16 @@
 // * FONT FAMILIES
 // ====================
 $font-arapey: 'Arapey', Times New Roman, Arial, serif;
+$font-lora: 'Lora', Times New Roman, Arial, serif;
+$font-scope-one: 'Scope One', Times New Roman, Arial, serif;
+$font-libre-franklin: 'Libre Franklin', Times New Roman, Arial, serif;
 $font-raleway: 'Raleway', Open Sans, Arial, serif;
 
 
 // * WEBSITE FONTS
 // ====================
-$font-default: $font-raleway !default;
-$font-heading: $font-arapey !default;
+$font-default: $font-lora !default;
+$font-heading: $font-raleway !default;
 $font-title: $font-arapey !default;
 $font-title--2: $font-raleway !default;
 $font-copy: $font-raleway !default;
