home banner animation

--- a/src/styles/05-components/0-components.scss
+++ b/src/styles/05-components/0-components.scss
@@ -1,5 +1,7 @@
 @import "body-copy";
+@import "home-banner";
 
 @mixin relashing-components {
-    @include relashe-components-body-copy;
+  @include relashe-components-body-copy;
+  @include relashe-components-home-banner;
 }
