--- a/src/styles/07-utilities/0-utilities.scss
+++ b/src/styles/07-utilities/0-utilities.scss
@@ -1,11 +1,13 @@
 @import "colors";
 @import "spacing";
 @import "typography";
+@import "layout";
 @import "accessibility";
 
 @mixin relashing-utilities {
   @include relashing-utilities-colors;
   @include relashing-utilities-spacing;
   @include relashing-utilities-typography;
+  @include relashing-utilities-layout;
   @include relashing-utilities-accessibility;
 }
