--- a/src/styles/01-settings/spacing.scss
+++ b/src/styles/01-settings/spacing.scss
@@ -1,41 +1,43 @@
 // * SPACING
 // ====================
 $base-spacing: 15px !default;
-$base-spacing--1200: 20vh !default;
+$base-spacing--1000: 20vh !default;
+$base-spacing--1400: 25vh !default;
 
-$spacing-groups:(
-    'base' : (
-        'breakpoints': (
-            null: $base-spacing,
-        )
+$spacing-groups: (
+  "base": (
+    "breakpoints": (
+      null: $base-spacing,
     ),
-    'heading' : (
-        'breakpoints':(
-            null: $base-spacing * 1.5,
-            screen1200: $base-spacing * 2,
-        )
+  ),
+  "heading": (
+    "breakpoints": (
+      null: $base-spacing * 1.5,
+      screen1200: $base-spacing * 3,
     ),
-    'content' : (
-        'breakpoints':(
-            null: $base-spacing * 3,
-            screen768: $base-spacing * 4,
-            screen1200: $base-spacing * 5,
-        )
+  ),
+  "content": (
+    "breakpoints": (
+      null: $base-spacing * 3,
+      screen768: $base-spacing * 4,
     ),
-    'container' : (
-        'breakpoints': (
-            null: $base-spacing * 3,
-            screen768: $base-spacing * 5,
-            screen1200: $base-spacing * 6,
-        )
+  ),
+  "container": (
+    "breakpoints": (
+      null: $base-spacing * 4.5,
+      screen768: $base-spacing * 5,
+      screen1200: $base-spacing * 6,
+      screen1400: $base-spacing * 10,
     ),
-    'banner' : (
-        'breakpoints': (
-            null: $base-spacing * 4,
-            screen768: $base-spacing * 5,
-            screen1200: $base-spacing--1200,
-        )
-    )
+  ),
+  "banner": (
+    "breakpoints": (
+      null: $base-spacing * 6,
+      screen460: $base-spacing * 8,
+      screen1000: $base-spacing--1000,
+      screen1400: $base-spacing--1400,
+    ),
+  ),
 );
 
 // * HEADER
