--- a/src/styles/07-utilities/spacing.scss
+++ b/src/styles/07-utilities/spacing.scss
@@ -1,27 +1,62 @@
 @mixin relashing-utilities-spacing {
+  // * CONTENT
+  // ====================
+  @each $container, $size in $content-containers {
+    .l-content-container-#{$container} {
+      max-width: $size;
+    }
+  }
 
-    // * CONTENT
-    // ====================
-    @each $container, $size in $content-containers {
-        .l-content-container-#{$container} { max-width: $size; }
+  // * SPACING
+  // ====================
+  @each $s-map, $value in $spacing-groups {
+    .u-spacing-#{$s-map} {
+      @include spacing($s-map);
+    }
+    .u-spacing-#{$s-map}-top {
+      @include spacing($s-group: $s-map, $position: top);
+    }
+    .u-spacing-#{$s-map}-bottom {
+      @include spacing($s-group: $s-map, $position: bottom);
     }
 
-    // * SPACING
-    // ====================
-    @each $s-map, $value in $spacing-groups {
-        .u-spacing-#{$s-map} { @include spacing($s-map) }
-        .u-spacing-#{$s-map}-top { @include spacing($s-group: $s-map, $position: top) }
-        .u-spacing-#{$s-map}-bottom { @include spacing($s-group: $s-map, $position: bottom) }
-
-        .u-spacing-#{$s-map}-margin { @include spacing($s-map, $s-type: margin) }
-        .u-spacing-#{$s-map}-margin-top { @include spacing($s-group: $s-map, $position: top, $s-type: margin) }
-        .u-spacing-#{$s-map}-margin-bottom { @include spacing($s-group: $s-map, $position: bottom, $s-type: margin) }
+    .u-spacing-#{$s-map}-margin {
+      @include spacing($s-map, $s-type: margin);
     }
-
-    // **
-    // * Elements that get hidden by the header and require extra padding-top
-    // *
-    .u-header-offset{
-        @include heading-offset();
+    .u-spacing-#{$s-map}-margin-top {
+      @include spacing($s-group: $s-map, $position: top, $s-type: margin);
     }
+    .u-spacing-#{$s-map}-margin-bottom {
+      @include spacing($s-group: $s-map, $position: bottom, $s-type: margin);
+    }
+  }
+
+  // **
+  // * Elements that get hidden by the header and require extra padding-top
+  // *
+  .u-header-offset {
+    @include heading-offset();
+  }
+
+  .u-spacing-0 {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  .u-spacing-0-top {
+    padding-top: 0 !important;
+  }
+  .u-spacing-0-bottom {
+    padding-bottom: 0 !important;
+  }
+
+  .u-spacing-0-margin {
+    margin-top: 0 !important;
+    margin-bottom: 0 !important;
+  }
+  .u-spacing-0-margin-top {
+    margin-top: 0 !important;
+  }
+  .u-spacing-0-margin-bottom {
+    margin-bottom: 0 !important;
+  }
 }
